# wasmtime

./: .gitignore  CS340Final.md  Cargo.toml
cranelift/isle/veri/: Cargo.toml  README.md  aarch64.trie
cranelift/isle/veri/aslp/: Cargo.toml
cranelift/isle/veri/aslp/src/: aslt.pest  ast.rs  bits.rs  client.rs  lib.rs  main.rs  parser.rs
cranelift/isle/veri/isaspec/: Cargo.toml
cranelift/isle/veri/isaspec/script/: generate.sh
cranelift/isle/veri/isaspec/src/: aarch64.rs  bits.rs  builder.rs  configure.rs  constraints.rs  instructions.rs  lib.rs  main.rs  memory.rs  semantics.rs  spec.rs
cranelift/isle/veri/isle_fuzzing/: Cargo.toml  automate_script.sh  testauto.clif
cranelift/isle/veri/isle_fuzzing/python_dictionary/: dic.txt  dictionarycreate.py
cranelift/isle/veri/isle_fuzzing/src/: ReadMe.md  big.isle  confused.clif  expr.rs  instructions.txt  main.rs  new.clif  test.clif  testauto.clif
cranelift/isle/veri/meta/data/: cliftags.json
cranelift/isle/veri/script/: count.sh  expand.sh  explorer.sh  graph.sh  reachable.sh  rule_stats.sh  serve.sh  trie_dump.sh  veri.sh
cranelift/isle/veri/src/: debug.rs  expand.rs  explorer.rs  lib.rs  main.rs  program.rs  reachability.rs  solver.rs  spec.rs  testing.rs  trie_again.rs  type_inference.rs  types.rs  veri.rs
cranelift/isle/veri/src/assets/: style.css
cranelift/isle/veri/veri/: Cargo.toml  build.rs  out.txt
cranelift/isle/veri/veri/output/: aarch64.veri  veri-bad.out  x64.veri
cranelift/isle/veri/veri_engine/: Cargo.toml  dynamic_widths.smt2  encoding_tests.smt2  static_widths.smt2
(+299 files in other folders)
