[package]
name = "cranelift-isle-veri"
version = "0.1.0"
edition.workspace = true

[dependencies]
cranelift-isle = { version = "*", path = "../isle/", features = ["fancy-errors", "logging"] }
cranelift-codegen-meta = { version = "*", path = "../../codegen/meta" }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true, features = ['std'] }
clap = { workspace = true, features = ['default', 'env'] }
easy-smt = "0.2"
